--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "zestie-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "8.1.x",
+    "npm": "5.0.x"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
