--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "8.1.x",
-    "npm": "5.0.x"
+    "node": "14.18.0", "npm": "7.24.1"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
